[gd_scene load_steps=5 format=3 uid="uid://d0k7ow6ig35r4"]

[ext_resource type="Script" uid="uid://ba4r3118jb4n0" path="res://scripts/ui/main_menu.gd" id="1_sl1te"]
[ext_resource type="Theme" uid="uid://kmndp1tcmq6f" path="res://assets/themes/title_theme.tres" id="2_m1kxf"]
[ext_resource type="Texture2D" uid="uid://b02slykbjhaut" path="res://assets/images/placeholder-image.png" id="3_1g8jr"]
[ext_resource type="Theme" uid="uid://cdvnx1x2un6o8" path="res://assets/themes/btn_theme.tres" id="3_m1kxf"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_sl1te")

[node name="title" type="Label" parent="."]
top_level = true
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = -708.0
offset_right = 708.0
offset_bottom = 366.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("2_m1kxf")
text = "2D Action RPG"
horizontal_alignment = 1
vertical_alignment = 1

[node name="core" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="TextureRect" parent="core"]
layout_mode = 2
texture = ExtResource("3_1g8jr")
expand_mode = 2
stretch_mode = 6

[node name="PanelContainer" type="PanelContainer" parent="core"]
layout_mode = 2

[node name="Panel" type="Panel" parent="core/PanelContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="buttons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_m1kxf")

[node name="play_btn" type="Button" parent="buttons/VBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play"
flat = true

[node name="spacer1" type="Control" parent="buttons/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="TutorialButton" type="Button" parent="buttons/VBoxContainer"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Tutorial"
flat = true

[node name="spacer3" type="Control" parent="buttons/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="options_btn" type="Button" parent="buttons/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Options"
flat = true

[node name="spacer2" type="Control" parent="buttons/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="quit_btn" type="Button" parent="buttons/VBoxContainer"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Quit"
flat = true

[connection signal="pressed" from="buttons/VBoxContainer/play_btn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="buttons/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="buttons/VBoxContainer/options_btn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="buttons/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
